# tier-list-tui

./: Cargo.toml  Justfile  README.md  languages.txt
media/: Justfile  banner.typ  lib.typ  logo.typ  mockup.typ
src/: app.rs  main.rs
