[package]
name = "tier-list-tui"
description = "TUI for creating tier lists"
repository = "https://github.com/sermuns/tier-list-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.30.0"
color-eyre = "0.6.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
