[package]
name = "tier-list-tui"
description = "TUI for creating tier lists"
repository = "https://github.com/sermuns/tier-list-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", default-features = false, features = ["layout-cache", "crossterm"] }
color-eyre = "0.6"
ratatui-image = { version = "10" }
image = "0.25"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
